# some_code

123/: CMakeLists.txt  main.cpp
Engine/: .gitignore  .gitmodules  CMakeLists.txt  README.md  RU-README.md  base-kit.cmake
Engine extended dev/Engine v0.0.1.0 debug release/: helper-file.txt
Engine extended dev/GitHub/: GitHub Repository.md
Engine extended dev/dev soft/: Development Software.md
Engine/docs/: general documentation.md  roadmap.md  technical documentation.md
Engine/src/: CMakeLists.txt  main.cpp  temporary.cpp  temporary.hpp  test.c  test.h
Engine/src/engine/: engine.cpp  engine.hpp  includes.hpp
Engine/src/engine/window/: createWindow.cpp  window.hpp
decoder/: CMakeLists.txt  decoder.c
helper/: CMakeLists.txt  base-kit.cmake
helper/src/: helper.c  helper.h
vk_interface/: run.cpp  vk.hpp
